# learning_cmake

./: CMakeLists.txt  Makefile  README.md  predictor.cpp
Testing/Temporary/: CTestCostData.txt
math/: CMakeLists.txt  Makefile  cmake_install.cmake  math_func.cpp  math_func.h
